[package]
name = "twirl"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "2.0"
oauth-client = { git = "https://github.com/ckampfe/oauth-client-rs.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
twitter-api = { git = "https://github.com/ckampfe/twitter-api-rs.git" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
