[package]
name = "twirl"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "3.0"
oauth-client = { git = "https://github.com/ckampfe/oauth-client-rs.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.5", features = ["full"] }
twitter-api = { git = "https://github.com/ckampfe/twitter-api-rs.git" }
