[package]
name = "twirl"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "4.0"
oauth-client = { git = "https://github.com/ckampfe/oauth-client-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
twitter-api = { git = "https://github.com/ckampfe/twitter-api-rs.git" }
